--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^5.2.8"
   },
   "dependencies": {
+    "lint": "^0.8.19",
     "preline": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
